# shark

./: Dockerfile  README.md  SECURITY.md  com.fossillogic.shark.json  meson.build  shark.spec
.github/workflows/: crossfile_ci.yml  docker_ci.yml  meson_ci.yml
code/: meson.build
code/logic/: alias.c  app.c  archive.c  ask.c  backup.c  change.c  chat.c  clean.c  commands.c  compare.c  copy.c  create.c  cryptic.c  dedupe.c  delete.c  diff.c  disk.c  file.c  find.c  grammar.c  help.c  info.c  introspect.c  lifecycle.c  link.c  list.c  magic.c  main.c  merge.c  meson.build  move.c  perm.c  pipe.c  play.c  process.c  remove.c  rename.c  rewrite.c  search.c  secure.c  (+14 more)
code/logic/fossil/code/: alias.h  app.h  archive.h  commands.h  common.h  compare.h  copy.h  create.h  cryptic.h  dedupe.h  grammar.h  help.h  introspect.h  lifecycle.h  link.h  magic.h  merge.h  move.h  perm.h  pipe.h  play.h  process.h  remove.h  rename.h  rewrite.h  search.h  show.h  snapshot.h  split.h  swap.h  sync.h  undo.h  watch.h
code/tests/: meson.build  todo.md  unit_runner.c
code/tests/cases/: test_alias.c  test_archive.c  test_compare.c  test_copy.c  test_create.c  test_cryptic.c  test_dedupe.c  test_delete.c  test_grammer.c  test_introspect.c  test_link.c  test_list.c  test_merge.c  test_move.c  test_remove.c  test_rename.c  test_rewrite.c  test_sample.c  test_search.c  test_show.c  test_split.c  test_stat.c  test_swap.c  test_sync.c  test_view.c  test_watch.c
code/tests/tools/: generate-runner.py
gui/: bridge.py  command_filter.py  console.py  gui.py  input  inputbar.py  sidebar.py  terminal.py  theme.py
snap/: snapcraft.yaml
subprojects/: fossil-ai.wrap  fossil-algorithm.wrap  fossil-cryptic.wrap  fossil-io.wrap  fossil-math.wrap  fossil-sys.wrap  fossil-test.wrap  fossil-type.wrap
